force-app/main/default/objects/Contact/fields/Email_Sms_Log_Complaint__c.field-meta.xml
<CustomField>
    <fullName>Email_Sms_Log_Complaint__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Email Sms Log Complaint</label>
    <referenceTo>Email_SMS_Log__c</referenceTo>
    <relationshipLabel>Contacts (Email Sms Log Complaint)</relationshipLabel>
    <relationshipName>Contacts3</relationshipName>
    <type>Lookup</type>
</CustomField>