force-app/main/default/objects/Contact/fields/Email_Sms_Log_Renew__c.field-meta.xml
<CustomField>
    <fullName>Email_Sms_Log_Renew__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Email Sms Log Renew</label>
    <referenceTo>Email_SMS_Log__c</referenceTo>
    <relationshipLabel>Contacts (Email Sms Log Renew)</relationshipLabel>
    <relationshipName>Contacts4</relationshipName>
    <type>Lookup</type>
</CustomField>