force-app/main/default/objects/Contact/fields/Emoticon__c.field-meta.xml
<CustomField>
    <fullName>Emoticon__c</fullName>
    <formula>IF(Last_Answer_Index__c != NULL, IMAGE( CASE( Last_Answer_Index__c , 
&quot;0&quot;, &quot;/resource/emo_1&quot;, 
&quot;1&quot;, &quot;/resource/emo_2&quot;, 
&quot;2&quot;, &quot;/resource/emo_3&quot;, 
&quot;3&quot;, &quot;/resource/emo_4&quot;, 
&quot;/resource/emo_5&quot;) , &quot;emoticon&quot; ), &apos;No Image&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Emoticon</label>
    <type>Text</type>
</CustomField>