force-app/main/default/objects/Contact/fields/EMPLOYERSLIABILITYPlaceofEmployment__c.field-meta.xml
<CustomField>
    <fullName>EMPLOYERSLIABILITYPlaceofEmployment__c</fullName>
    <description>EMPLOYERSLIABILITYPlaceofEmployment.</description>
    <label>EMPLOYERSLIABILITYPlaceofEmployment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>