force-app/main/default/objects/Contact/fields/Engine_No__c.field-meta.xml
<CustomField>
    <fullName>Engine_No__c</fullName>
    <label>Engine No</label>
    <length>100</length>
    <type>Text</type>
</CustomField>