force-app/main/default/objects/Contact/fields/FCR_Agt__c.field-meta.xml
<CustomField>
    <fullName>FCR_Agt__c</fullName>
    <label>FCR Agt</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>