force-app/main/default/objects/Contact/fields/FCR_Apr__c.field-meta.xml
<CustomField>
    <fullName>FCR_Apr__c</fullName>
    <label>FCR Apr</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>