force-app/main/default/objects/Contact/fields/FCR_Des__c.field-meta.xml
<CustomField>
    <fullName>FCR_Des__c</fullName>
    <label>FCR Des</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>