force-app/main/default/objects/Contact/fields/FCR_Feb__c.field-meta.xml
<CustomField>
    <fullName>FCR_Feb__c</fullName>
    <label>FCR Feb</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>