force-app/main/default/objects/Contact/fields/FCR_Jan__c.field-meta.xml
<CustomField>
    <fullName>FCR_Jan__c</fullName>
    <label>FCR Jan</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>