force-app/main/default/objects/Contact/fields/FCR_Jul__c.field-meta.xml
<CustomField>
    <fullName>FCR_Jul__c</fullName>
    <label>FCR Jul</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>