force-app/main/default/objects/Contact/fields/FCR_Jun__c.field-meta.xml
<CustomField>
    <fullName>FCR_Jun__c</fullName>
    <label>FCR Jun</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>