force-app/main/default/objects/Contact/fields/FCR_Mar__c.field-meta.xml
<CustomField>
    <fullName>FCR_Mar__c</fullName>
    <label>FCR Mar</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>