force-app/main/default/objects/Contact/fields/FCR_Mei__c.field-meta.xml
<CustomField>
    <fullName>FCR_Mei__c</fullName>
    <label>FCR Mei</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>