force-app/main/default/objects/Contact/fields/FCR_Nov__c.field-meta.xml
<CustomField>
    <fullName>FCR_Nov__c</fullName>
    <label>FCR Nov</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>