force-app/main/default/objects/Contact/fields/FCR_Okt__c.field-meta.xml
<CustomField>
    <fullName>FCR_Okt__c</fullName>
    <label>FCR Okt</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>