force-app/main/default/objects/Contact/fields/FCR_Rate_Agt__c.field-meta.xml
<CustomField>
    <fullName>FCR_Rate_Agt__c</fullName>
    <formula>IF( (FCR_Agt__c + Repeat_Case_Agt__c) == 0, 0, FCR_Agt__c / (FCR_Agt__c + Repeat_Case_Agt__c) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>FCR Rate Agt</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>