force-app/main/default/objects/Contact/fields/FCR_Rate_Apr__c.field-meta.xml
<CustomField>
    <fullName>FCR_Rate_Apr__c</fullName>
    <formula>IF( (FCR_Apr__c + Repeat_Case_Apr__c) == 0, 0, FCR_Apr__c / (FCR_Apr__c + Repeat_Case_Apr__c) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>FCR Rate Apr</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>