force-app/main/default/objects/Contact/fields/FCR_Rate_Des__c.field-meta.xml
<CustomField>
    <fullName>FCR_Rate_Des__c</fullName>
    <formula>IF( (FCR_Des__c + Repeat_Case_Des__c) == 0, 0, FCR_Des__c / (FCR_Des__c + Repeat_Case_Des__c) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>FCR Rate Des</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>