force-app/main/default/objects/Contact/fields/FCR_Rate_Feb__c.field-meta.xml
<CustomField>
    <fullName>FCR_Rate_Feb__c</fullName>
    <formula>IF( (FCR_Feb__c + Repeat_Case_Feb__c) == 0, 0, FCR_Feb__c / (FCR_Feb__c + Repeat_Case_Feb__c) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>FCR Rate Feb</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>