force-app/main/default/objects/Contact/fields/FCR_Rate_Jan__c.field-meta.xml
<CustomField>
    <fullName>FCR_Rate_Jan__c</fullName>
    <formula>IF( (FCR_Jan__c + Repeat_Case_Jan__c) == 0, 0, FCR_Jan__c / (FCR_Jan__c + Repeat_Case_Jan__c) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>FCR Rate Jan</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>