force-app/main/default/objects/Contact/fields/FCR_Rate_Jul__c.field-meta.xml
<CustomField>
    <fullName>FCR_Rate_Jul__c</fullName>
    <formula>IF( (FCR_Jul__c + Repeat_Case_Jul__c) == 0, 0, FCR_Jul__c / (FCR_Jul__c + Repeat_Case_Jul__c) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>FCR Rate Jul</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>