force-app/main/default/objects/Contact/fields/FCR_Rate_Jun__c.field-meta.xml
<CustomField>
    <fullName>FCR_Rate_Jun__c</fullName>
    <formula>IF( (FCR_Jun__c + Repeat_Case_Jun__c) == 0, 0, FCR_Jun__c / (FCR_Jun__c + Repeat_Case_Jun__c) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>FCR Rate Jun</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>