force-app/main/default/objects/Contact/fields/FCR_Rate_Mar__c.field-meta.xml
<CustomField>
    <fullName>FCR_Rate_Mar__c</fullName>
    <formula>IF( (FCR_Mar__c + Repeat_Case_Mar__c) == 0, 0, FCR_Mar__c / (FCR_Mar__c + Repeat_Case_Mar__c) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>FCR Rate Mar</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>