force-app/main/default/objects/Contact/fields/FCR_Rate_Mei__c.field-meta.xml
<CustomField>
    <fullName>FCR_Rate_Mei__c</fullName>
    <formula>IF( (FCR_Mei__c + Repeat_Case_Mei__c) == 0, 0, FCR_Mei__c / (FCR_Mei__c + Repeat_Case_Mei__c) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>FCR Rate Mei</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>