force-app/main/default/objects/Contact/fields/FCR_Rate_Nov__c.field-meta.xml
<CustomField>
    <fullName>FCR_Rate_Nov__c</fullName>
    <formula>IF( (FCR_Nov__c + Repeat_Case_Nov__c) == 0, 0, FCR_Nov__c / (FCR_Nov__c + Repeat_Case_Nov__c) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>FCR Rate Nov</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>