force-app/main/default/objects/Contact/fields/FCR_Rate_Okt__c.field-meta.xml
<CustomField>
    <fullName>FCR_Rate_Okt__c</fullName>
    <formula>IF( (FCR_Okt__c + Repeat_Case_Okt__c) == 0, 0, FCR_Okt__c / (FCR_Okt__c + Repeat_Case_Okt__c) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>FCR Rate Okt</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>