force-app/main/default/objects/Contact/fields/FCR_Rate_Sep__c.field-meta.xml
<CustomField>
    <fullName>FCR_Rate_Sep__c</fullName>
    <formula>IF( (FCR_Sep__c + Repeat_Case_Sep__c) == 0, 0, FCR_Sep__c / (FCR_Sep__c + Repeat_Case_Sep__c) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>FCR Rate Sep</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>