force-app/main/default/objects/Contact/fields/FCR_Sep__c.field-meta.xml
<CustomField>
    <fullName>FCR_Sep__c</fullName>
    <label>FCR Sep</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>