force-app/main/default/objects/Contact/fields/FIDELITYGUARANTRiskLoc__c.field-meta.xml
<CustomField>
    <fullName>FIDELITYGUARANTRiskLoc__c</fullName>
    <description>FIDELITYGUARANTEERiskLoc.</description>
    <label>FIDELITYGUARANTEERiskLoc</label>
    <length>255</length>
    <type>Text</type>
</CustomField>