force-app/main/default/objects/Contact/fields/FIREWITHEXTPERILSRiskLoc__c.field-meta.xml
<CustomField>
    <fullName>FIREWITHEXTPERILSRiskLoc__c</fullName>
    <description>FIREWITHEXTPERILSRiskLoc.</description>
    <label>FIREWITHEXTPERILSRiskLoc</label>
    <length>255</length>
    <type>Text</type>
</CustomField>