force-app/main/default/objects/Contact/fields/FIREWITHEXTPERILSSHARIARiskLoc__c.field-meta.xml
<CustomField>
    <fullName>FIREWITHEXTPERILSSHARIARiskLoc__c</fullName>
    <description>FIREWITHEXTPERILSSHARIARiskLoc.</description>
    <label>FIREWITHEXTPERILSSHARIARiskLoc</label>
    <length>255</length>
    <type>Text</type>
</CustomField>