force-app/main/default/objects/Contact/fields/FlagExcludeICFClaim__c.field-meta.xml
<CustomField>
    <fullName>FlagExcludeICFClaim__c</fullName>
    <defaultValue>false</defaultValue>
    <label>FlagExcludeICFClaim</label>
    <type>Checkbox</type>
</CustomField>