force-app/main/default/objects/Contact/fields/Freeze_Ask_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Freeze_Ask_End_Date__c</fullName>
    <inlineHelpText>The end of freeze date for survey participant. Type: I Ask</inlineHelpText>
    <label>Freeze Ask End Date</label>
    <type>Date</type>
</CustomField>