force-app/main/default/objects/Contact/fields/Freeze_Buy_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Freeze_Buy_End_Date__c</fullName>
    <inlineHelpText>The end of freeze date for survey participant. Type: I Buy</inlineHelpText>
    <label>Freeze Buy End Date</label>
    <type>Date</type>
</CustomField>