force-app/main/default/objects/Contact/fields/Freeze_Claim_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Freeze_Claim_End_Date__c</fullName>
    <inlineHelpText>The end of freeze date for survey participant. Type: I Claim</inlineHelpText>
    <label>Freeze Claim End Date</label>
    <type>Date</type>
</CustomField>