force-app/main/default/objects/Contact/fields/Freeze_Complaint_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Freeze_Complaint_End_Date__c</fullName>
    <inlineHelpText>The end of freeze date for survey participant. Type: I Complaint</inlineHelpText>
    <label>Freeze Complaint End Date</label>
    <type>Date</type>
</CustomField>