force-app/main/default/objects/Contact/fields/Freeze_Renew_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Freeze_Renew_End_Date__c</fullName>
    <inlineHelpText>The end of freeze date for survey participant. Type: I Renew</inlineHelpText>
    <label>Freeze Renew End Date</label>
    <type>Date</type>
</CustomField>