force-app/main/default/objects/Contact/fields/GOLDINSAFESHARIARiskLoc__c.field-meta.xml
<CustomField>
    <fullName>GOLDINSAFESHARIARiskLoc__c</fullName>
    <description>GOLDINSAFESHARIARiskLoc.</description>
    <label>GOLDINSAFESHARIARiskLoc</label>
    <length>255</length>
    <type>Text</type>
</CustomField>