force-app/main/default/objects/Contact/fields/GOLDINTRANSITSHARIACarryingSchedule__c.field-meta.xml
<CustomField>
    <fullName>GOLDINTRANSITSHARIACarryingSchedule__c</fullName>
    <description>GOLDINTRANSITSHARIACarryingSchedule.</description>
    <label>GOLDINTRANSITSHARIACarryingSchedule</label>
    <length>255</length>
    <type>Text</type>
</CustomField>