force-app/main/default/objects/Contact/fields/HEALTHINSAddress__c.field-meta.xml
<CustomField>
    <fullName>HEALTHINSAddress__c</fullName>
    <description>HEALTHINSURANCEAddress.</description>
    <label>HEALTHINSURANCEAddress</label>
    <length>255</length>
    <type>Text</type>
</CustomField>