force-app/main/default/objects/Contact/fields/HEALTHINSBirthPlace__c.field-meta.xml
<CustomField>
    <fullName>HEALTHINSBirthPlace__c</fullName>
    <description>HEALTHINSURANCEBirthPlace.</description>
    <label>HEALTHINSURANCEBirthPlace</label>
    <length>255</length>
    <type>Text</type>
</CustomField>