force-app/main/default/objects/Contact/fields/HEALTHINSName__c.field-meta.xml
<CustomField>
    <fullName>HEALTHINSName__c</fullName>
    <description>HEALTHINSURANCEName.</description>
    <label>HEALTHINSURANCEName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>