force-app/main/default/objects/Contact/fields/HEAVYEQUIPMENTEngineNo__c.field-meta.xml
<CustomField>
    <fullName>HEAVYEQUIPMENTEngineNo__c</fullName>
    <description>HEAVYEQUIPMENTEngineNo.</description>
    <label>HEAVYEQUIPMENTEngineNo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>