force-app/main/default/objects/Contact/fields/HeavyVehicleEngineNo__c.field-meta.xml
<CustomField>
    <fullName>HeavyVehicleEngineNo__c</fullName>
    <description>HeavyVehicleEngineNo.</description>
    <label>HeavyVehicleEngineNo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>