force-app/main/default/objects/Contact/fields/HeavyVehicleRiskLoc__c.field-meta.xml
<CustomField>
    <fullName>HeavyVehicleRiskLoc__c</fullName>
    <description>HeavyVehicleRiskLoc.</description>
    <label>HeavyVehicleRiskLoc</label>
    <length>255</length>
    <type>Text</type>
</CustomField>