force-app/main/default/objects/Contact/fields/HeavyVehicleSerialNo__c.field-meta.xml
<CustomField>
    <fullName>HeavyVehicleSerialNo__c</fullName>
    <description>HeavyVehicleSerialNo.</description>
    <label>HeavyVehicleSerialNo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>