force-app/main/default/objects/Contact/fields/Helpline_Queue_Name__c.field-meta.xml
<CustomField>
    <fullName>Helpline_Queue_Name__c</fullName>
    <label>Helpline Queue Name</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>AFI - Email Agent VIP Queue</fullName>
            </value>
            <value>
                <fullName>AFI - Email Standart Queue</fullName>
            </value>
            <value>
                <fullName>AFI - Email Blacklist Queue</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>