force-app/main/default/objects/Contact/fields/HOLEINONEDateofEvent__c.field-meta.xml
<CustomField>
    <fullName>HOLEINONEDateofEvent__c</fullName>
    <description>HOLEINONEDateofEvent.</description>
    <label>HOLEINONEDateofEvent</label>
    <length>255</length>
    <type>Text</type>
</CustomField>