force-app/main/default/objects/Contact/fields/HOLEINONEParticipant__c.field-meta.xml
<CustomField>
    <fullName>HOLEINONEParticipant__c</fullName>
    <description>HOLEINONEParticipant.</description>
    <label>HOLEINONEParticipant</label>
    <length>255</length>
    <type>Text</type>
</CustomField>