force-app/main/default/objects/Contact/fields/HOMEPLUSRiskLoc__c.field-meta.xml
<CustomField>
    <fullName>HOMEPLUSRiskLoc__c</fullName>
    <description>HOMEPLUSRiskLoc.</description>
    <label>HOMEPLUSRiskLoc</label>
    <length>255</length>
    <type>Text</type>
</CustomField>