force-app/main/default/objects/Contact/fields/HomeSafeSTNDRdRiskLoc__c.field-meta.xml
<CustomField>
    <fullName>HomeSafeSTNDRdRiskLoc__c</fullName>
    <description>HomeSafeSTNDRdRiskLoc.</description>
    <label>HomeSafeSTNDRdRiskLoc</label>
    <length>255</length>
    <type>Text</type>
</CustomField>