force-app/main/default/objects/Contact/fields/HotelierINSRiskLoc__c.field-meta.xml
<CustomField>
    <fullName>HotelierINSRiskLoc__c</fullName>
    <description>HotelierInsuranceRiskLoc.</description>
    <label>HotelierInsuranceRiskLoc</label>
    <length>255</length>
    <type>Text</type>
</CustomField>