force-app/main/default/objects/Contact/fields/HouseholderRiskLoc__c.field-meta.xml
<CustomField>
    <fullName>HouseholderRiskLoc__c</fullName>
    <description>HouseholderRiskLoc.</description>
    <label>HouseholderRiskLoc</label>
    <length>255</length>
    <type>Text</type>
</CustomField>