force-app/main/default/objects/Contact/fields/HouseownerRiskLoc__c.field-meta.xml
<CustomField>
    <fullName>HouseownerRiskLoc__c</fullName>
    <description>HouseownerRiskLoc.</description>
    <label>HouseownerRiskLoc</label>
    <length>255</length>
    <type>Text</type>
</CustomField>