force-app/main/default/objects/Contact/fields/INDUSTRIALALLRISKRiskLoc__c.field-meta.xml
<CustomField>
    <fullName>INDUSTRIALALLRISKRiskLoc__c</fullName>
    <description>INDUSTRIALALLRISKRiskLoc.</description>
    <label>INDUSTRIALALLRISKRiskLoc</label>
    <length>255</length>
    <type>Text</type>
</CustomField>