force-app/main/default/objects/Contact/fields/INDUSTRIALALLRISKSHARIARiskLoc__c.field-meta.xml
<CustomField>
    <fullName>INDUSTRIALALLRISKSHARIARiskLoc__c</fullName>
    <description>INDUSTRIALALLRISKSHARIARiskLoc.</description>
    <label>INDUSTRIALALLRISKSHARIARiskLoc</label>
    <length>255</length>
    <type>Text</type>
</CustomField>