force-app/main/default/objects/Contact/fields/Inquiry_RecordTypeId_Keeper__c.field-meta.xml
<CustomField>
    <fullName>Inquiry_RecordTypeId_Keeper__c</fullName>
    <description>-- 1 DESEMBER 2019 --
IF(ISPICKVAL(Entity__c, &apos;ALI&apos;),&apos;0126F000001MIGNQA4&apos;,
IF(ISPICKVAL(Entity__c, &apos;AGI&apos;),&apos;0126F0000026h75&apos;, 
IF(ISPICKVAL($User.Entity__c, &apos;AFI&apos;),&apos;01290000000mOgZ&apos;, 
IF(ISPICKVAL($User.Entity__c, &apos;AMFS&apos;),&apos;01290000000msDX&apos;, 
&apos;01290000000msDc&apos;) ) ) )</description>
    <formula>IF(ISPICKVAL(Entity__c, &apos;ALI&apos;),&apos;0126F000001MIGNQA4&apos;,
IF(ISPICKVAL(Entity__c, &apos;AGI&apos;) &amp;&amp; LEFT( Policy_No__c , 1) == &apos;G&apos; ,&apos;0126F0000026h75&apos;,
IF(ISPICKVAL(Entity__c, &apos;AGI&apos;),&apos;01290000000msDc&apos;,
IF(ISPICKVAL(Entity__c, &apos;AFI&apos;),&apos;01290000000mOgZ&apos;,
IF(ISPICKVAL(Entity__c, &apos;AMFS&apos;),&apos;01290000000msDX&apos;,
&apos;01290000000msDc&apos;) ) ) ) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Inquiry RecordTypeId Keeper</label>
    <type>Text</type>
</CustomField>