force-app/main/default/objects/Contact/fields/INSTALLMENTSALESBONDPrincipalCode__c.field-meta.xml
<CustomField>
    <fullName>INSTALLMENTSALESBONDPrincipalCode__c</fullName>
    <description>INSTALLMENTSALESBONDPrincipalCode.</description>
    <label>INSTALLMENTSALESBONDPrincipalCode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>