force-app/main/default/objects/Contact/fields/Insurance_Type_Agt__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Type_Agt__c</fullName>
    <description>Insurance Type Agt for AFI</description>
    <label>Insurance Type Agt</label>
    <length>100</length>
    <type>Text</type>
</CustomField>