force-app/main/default/objects/Contact/fields/Insurance_Type_Apr__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Type_Apr__c</fullName>
    <description>Insurance Type Apr for AFI</description>
    <label>Insurance Type Apr</label>
    <length>100</length>
    <type>Text</type>
</CustomField>