force-app/main/default/objects/Contact/fields/Insurance_Type_Des__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Type_Des__c</fullName>
    <description>Insurance Type Des for AFI</description>
    <label>Insurance Type Des</label>
    <length>100</length>
    <type>Text</type>
</CustomField>