force-app/main/default/objects/Contact/fields/Insurance_Type_Feb__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Type_Feb__c</fullName>
    <description>Insurance Type Feb for AFI</description>
    <label>Insurance Type Feb</label>
    <length>100</length>
    <type>Text</type>
</CustomField>