force-app/main/default/objects/Contact/fields/Insurance_Type_Jan__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Type_Jan__c</fullName>
    <description>Insurance Type Jan for AFI</description>
    <label>Insurance Type Jan</label>
    <length>100</length>
    <type>Text</type>
</CustomField>