force-app/main/default/objects/Contact/fields/Insurance_Type_Jul__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Type_Jul__c</fullName>
    <description>Insurance Type Jul for AFI</description>
    <label>Insurance Type Jul</label>
    <length>100</length>
    <type>Text</type>
</CustomField>