force-app/main/default/objects/Contact/fields/Insurance_Type_Jun__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Type_Jun__c</fullName>
    <description>Insurance Type Jun for AFI</description>
    <label>Insurance Type Jun</label>
    <length>100</length>
    <type>Text</type>
</CustomField>