force-app/main/default/objects/Contact/fields/Insurance_Type_Mar__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Type_Mar__c</fullName>
    <description>Insurance Type Mar for AFI</description>
    <label>Insurance Type Mar</label>
    <length>100</length>
    <type>Text</type>
</CustomField>