force-app/main/default/objects/Contact/fields/Insurance_Type_Mei__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Type_Mei__c</fullName>
    <description>Insurance Type Mei for AFI</description>
    <label>Insurance Type Mei</label>
    <length>100</length>
    <type>Text</type>
</CustomField>