force-app/main/default/objects/Contact/fields/Insurance_Type_Nov__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Type_Nov__c</fullName>
    <description>Insurance Type Nov for AFI</description>
    <label>Insurance Type Nov</label>
    <length>100</length>
    <type>Text</type>
</CustomField>