force-app/main/default/objects/Contact/fields/Insurance_Type_Okt__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Type_Okt__c</fullName>
    <description>Insurance Type Okt for AFI</description>
    <label>Insurance Type Okt</label>
    <length>100</length>
    <type>Text</type>
</CustomField>