force-app/main/default/objects/Contact/fields/Insurance_Type_Sep__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Type_Sep__c</fullName>
    <description>Insurance Type Sep for AFI</description>
    <label>Insurance Type Sep</label>
    <length>100</length>
    <type>Text</type>
</CustomField>