force-app/main/default/objects/Contact/fields/Insured_DoB__c.field-meta.xml
<CustomField>
    <fullName>Insured_DoB__c</fullName>
    <label>Insured DoB</label>
    <type>Date</type>
</CustomField>