force-app/main/default/objects/Contact/fields/Insured_Email__c.field-meta.xml
<CustomField>
    <fullName>Insured_Email__c</fullName>
    <label>Insured Email</label>
    <type>Email</type>
</CustomField>