force-app/main/default/objects/Contact/fields/Insured_Id__c.field-meta.xml
<CustomField>
    <fullName>Insured_Id__c</fullName>
    <label>Insured Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>