force-app/main/default/objects/Contact/fields/Insured_Name__c.field-meta.xml
<CustomField>
    <fullName>Insured_Name__c</fullName>
    <label>Insured Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>