force-app/main/default/objects/Contact/fields/Insured_No__c.field-meta.xml
<CustomField>
    <fullName>Insured_No__c</fullName>
    <label>Insured No</label>
    <length>255</length>
    <type>Text</type>
</CustomField>