force-app/main/default/objects/Contact/fields/Insured_Object__c.field-meta.xml
<CustomField>
    <fullName>Insured_Object__c</fullName>
    <label>Insured Object</label>
    <length>255</length>
    <type>Text</type>
</CustomField>