force-app/main/default/objects/Contact/fields/InsuredObjectMV__c.field-meta.xml
<CustomField>
    <fullName>InsuredObjectMV__c</fullName>
    <label>InsuredObjectMV</label>
    <length>255</length>
    <type>Text</type>
</CustomField>