force-app/main/default/objects/Contact/fields/InsuredObjectNonMV__c.field-meta.xml
<CustomField>
    <fullName>InsuredObjectNonMV__c</fullName>
    <label>InsuredObjectNonMV</label>
    <length>255</length>
    <type>Text</type>
</CustomField>