force-app/main/default/objects/Contact/fields/Interval_Completed_Month__c.field-meta.xml
<CustomField>
    <fullName>Interval_Completed_Month__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Interval Completed (month)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>