force-app/main/default/objects/Contact/fields/Interval_Max_Loop__c.field-meta.xml
<CustomField>
    <fullName>Interval_Max_Loop__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Interval Max Loop</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>