force-app/main/default/objects/Contact/fields/Interval_No_Response_Month__c.field-meta.xml
<CustomField>
    <fullName>Interval_No_Response_Month__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Interval No Response (month)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>