force-app/main/default/objects/Contact/fields/Is_Account_Created__c.field-meta.xml
<CustomField>
    <fullName>Is_Account_Created__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Account Created</label>
    <type>Checkbox</type>
</CustomField>