force-app/main/default/objects/Contact/fields/Is_Unit_Link_Product__c.field-meta.xml
<CustomField>
    <fullName>Is_Unit_Link_Product__c</fullName>
    <formula>OR(LEFT(WelcomeCall_Product_Code_Plan__c , 1) = &apos;H&apos;,LEFT(WelcomeCall_Product_Code_Plan__c , 1) = &apos;U&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Unit Link Product</label>
    <type>Checkbox</type>
</CustomField>