force-app/main/default/objects/Contact/fields/isEntityAccountSimilarwithContact__c.field-meta.xml
<CustomField>
    <fullName>isEntityAccountSimilarwithContact__c</fullName>
    <formula>Text(Entity__c) =  Text(Account.Entity__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>isEntityAccountSimilarwithContact</label>
    <type>Checkbox</type>
</CustomField>