force-app/main/default/objects/Contact/fields/Issued_Date_TelUW__c.field-meta.xml
<CustomField>
    <fullName>Issued_Date_TelUW__c</fullName>
    <description>Tell UW Isued Date</description>
    <label>Issued Date TelUW</label>
    <type>Date</type>
</CustomField>