force-app/main/default/objects/Contact/fields/KRPEMILIKANMOBILKPMChasisNo__c.field-meta.xml
<CustomField>
    <fullName>KRPEMILIKANMOBILKPMChasisNo__c</fullName>
    <description>KREDITPEMILIKANMOBILKPMChasisNo.</description>
    <label>KREDITPEMILIKANMOBILKPMChasisNo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>