force-app/main/default/objects/Contact/fields/KRPEMILIKANMOBILKPMMCHNENo__c.field-meta.xml
<CustomField>
    <fullName>KRPEMILIKANMOBILKPMMCHNENo__c</fullName>
    <description>KREDITPEMILIKANMOBILKPMMachineNo.</description>
    <label>KREDITPEMILIKANMOBILKPMMachineNo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>