force-app/main/default/objects/Contact/fields/KRPEMILIKANMOBILKPMSHARIAChasisNo__c.field-meta.xml
<CustomField>
    <fullName>KRPEMILIKANMOBILKPMSHARIAChasisNo__c</fullName>
    <description>KREDITPEMILIKANMOBILKPMSHARIAChasisNo.</description>
    <label>KREDITPEMILIKANMOBILKPMSHARIAChasisNo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>