force-app/main/default/objects/Contact/fields/KRPEMILIKANMOBILKPMSHARIAMCHNENo__c.field-meta.xml
<CustomField>
    <fullName>KRPEMILIKANMOBILKPMSHARIAMCHNENo__c</fullName>
    <description>KREDITPEMILIKANMOBILKPMSHARIAMachineNo.</description>
    <label>KREDITPEMILIKANMOBILKPMSHARIAMachineNo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>