force-app/main/default/objects/Contact/fields/KRPEMILIKANRUMAHKPRRiskLoc__c.field-meta.xml
<CustomField>
    <fullName>KRPEMILIKANRUMAHKPRRiskLoc__c</fullName>
    <description>KREDITPEMILIKANRUMAHKPRRiskLoc.</description>
    <label>KREDITPEMILIKANRUMAHKPRRiskLoc</label>
    <length>255</length>
    <type>Text</type>
</CustomField>