force-app/main/default/objects/Contact/fields/KRPEMILIKANRUMAHKPRSHARIARiskLoc__c.field-meta.xml
<CustomField>
    <fullName>KRPEMILIKANRUMAHKPRSHARIARiskLoc__c</fullName>
    <description>KREDITPEMILIKANRUMAHKPRSHARIARiskLoc.</description>
    <label>KREDITPEMILIKANRUMAHKPRSHARIARiskLoc</label>
    <length>255</length>
    <type>Text</type>
</CustomField>