force-app/main/default/objects/Contact/fields/KRSerbaGunaKSGRiskLoc__c.field-meta.xml
<CustomField>
    <fullName>KRSerbaGunaKSGRiskLoc__c</fullName>
    <description>KreditSerbaGunaKSGRiskLoc.</description>
    <label>KreditSerbaGunaKSGRiskLoc</label>
    <length>255</length>
    <type>Text</type>
</CustomField>