force-app/main/default/objects/Contact/fields/Lapse_Date_Day__c.field-meta.xml
<CustomField>
    <fullName>Lapse_Date_Day__c</fullName>
    <label>Lapse Date Day</label>
    <type>Date</type>
</CustomField>