force-app/main/default/objects/Contact/fields/Last_Answer__c.field-meta.xml
<CustomField>
    <fullName>Last_Answer__c</fullName>
    <label>Last Answer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>