force-app/main/default/objects/Contact/fields/Last_Answer_Index__c.field-meta.xml
<CustomField>
    <fullName>Last_Answer_Index__c</fullName>
    <label>Last Answer Index</label>
    <length>255</length>
    <type>Text</type>
</CustomField>