force-app/main/default/objects/Contact/fields/Last_Case__c.field-meta.xml
<CustomField>
    <fullName>Last_Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Last Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Contacts</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>