force-app/main/default/objects/Contact/fields/Last_Case_Agt__c.field-meta.xml
<CustomField>
    <fullName>Last_Case_Agt__c</fullName>
    <label>Last Case Agt</label>
    <type>Date</type>
</CustomField>