force-app/main/default/objects/Contact/fields/Last_Case_Apr__c.field-meta.xml
<CustomField>
    <fullName>Last_Case_Apr__c</fullName>
    <label>Last Case Apr</label>
    <type>Date</type>
</CustomField>