force-app/main/default/objects/Contact/fields/Last_Case_Created_in_hour__c.field-meta.xml
<CustomField>
    <fullName>Last_Case_Created_in_hour__c</fullName>
    <formula>Last_Case__r.Case_Created_in_hour__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Last Case Created in hour</label>
    <type>Text</type>
</CustomField>