force-app/main/default/objects/Contact/fields/Last_Case_Des__c.field-meta.xml
<CustomField>
    <fullName>Last_Case_Des__c</fullName>
    <label>Last Case Des</label>
    <type>Date</type>
</CustomField>