force-app/main/default/objects/Contact/fields/Last_Case_Feb__c.field-meta.xml
<CustomField>
    <fullName>Last_Case_Feb__c</fullName>
    <label>Last Case Feb</label>
    <type>Date</type>
</CustomField>