force-app/main/default/objects/Contact/fields/Last_Case_Jan__c.field-meta.xml
<CustomField>
    <fullName>Last_Case_Jan__c</fullName>
    <label>Last Case Jan</label>
    <type>Date</type>
</CustomField>