force-app/main/default/objects/Contact/fields/Last_Case_Jul__c.field-meta.xml
<CustomField>
    <fullName>Last_Case_Jul__c</fullName>
    <label>Last Case Jul</label>
    <type>Date</type>
</CustomField>