force-app/main/default/objects/Contact/fields/Last_Case_Jun__c.field-meta.xml
<CustomField>
    <fullName>Last_Case_Jun__c</fullName>
    <label>Last Case Jun</label>
    <type>Date</type>
</CustomField>