force-app/main/default/objects/Contact/fields/Last_Case_Mar__c.field-meta.xml
<CustomField>
    <fullName>Last_Case_Mar__c</fullName>
    <label>Last Case Mar</label>
    <type>Date</type>
</CustomField>