force-app/main/default/objects/Contact/fields/Last_Case_Mei__c.field-meta.xml
<CustomField>
    <fullName>Last_Case_Mei__c</fullName>
    <label>Last Case Mei</label>
    <type>Date</type>
</CustomField>