force-app/main/default/objects/Contact/fields/Last_Case_Nov__c.field-meta.xml
<CustomField>
    <fullName>Last_Case_Nov__c</fullName>
    <label>Last Case Nov</label>
    <type>Date</type>
</CustomField>