force-app/main/default/objects/Contact/fields/Last_Case_Okt__c.field-meta.xml
<CustomField>
    <fullName>Last_Case_Okt__c</fullName>
    <label>Last Case Okt</label>
    <type>Date</type>
</CustomField>