force-app/main/default/objects/Contact/fields/Last_Case_Sep__c.field-meta.xml
<CustomField>
    <fullName>Last_Case_Sep__c</fullName>
    <label>Last Case Sep</label>
    <type>Date</type>
</CustomField>