force-app/main/default/objects/Contact/fields/Last_Response_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Response_Date__c</fullName>
    <label>Last Response Date</label>
    <type>Date</type>
</CustomField>