force-app/main/default/objects/Contact/fields/Last_Survey_Type__c.field-meta.xml
<CustomField>
    <fullName>Last_Survey_Type__c</fullName>
    <label>Last Survey Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>